# aixm-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: ci.yml
src/: annotation.rs  gmd.rs  gml.rs  lib.rs  magnetic_variation.rs  main.rs  time_interval.rs
